shared/css/styles.css
/* ... */
.expandable-code-block.expanded
.long-code-block::after {

  opacity: 0;
}


/* ========================================= */
/* Code syntax highlighting with Prism */
/* ========================================= */
/*
.token.function {
   color: #1d5fda; 
} */

.token.excelString {
  color: #1A7F37;
}

.token.excelNumber {
  color: #6b2ae3;
}

.token.excelLamba {
  color: #930a6f;
}

.token.comment {
  color: #8B949E;
  font-style: italic;
}

/* ========================================= */
/* Prism Override */
/* ========================================= */

pre[class*="language-"],
code[class*="language-"] {

  background: none !important;

  padding: 0 !important;
  margin: 0 !important;

  border-radius: 0 !important;

  text-shadow: none !important;

  font-family:
    Consolas,
    Monaco,
    monospace;

  font-size: clamp(13.5px, 1.5vw, 14.5px) !important;
  color: #242424 !important;
  line-height: 1.3 !important;
}

/* ========================================= */
/* Images */
/* ========================================= */

.image-container {
    width: 100%;

    margin-top: clamp(42px, 8vw, 52px);
    margin-bottom: clamp(42px, 8vw, 62px); 
    margin-left: auto;
    margin-right: auto; 
}

.compact-image {
  max-width: 450px;
}

.large-image {
  max-width: 580px;
}

.image-caption {
    margin-top: 16px;

    text-align: center;

    font-size: 13.5px;
    line-height: 20px;

    color: #7A7C80;
}

.zoomable-image {
    width: 100%;
    height: auto;
    display: block;  
    cursor: pointer;

    transition: filter 200ms ease;
}

.bordered-image {
  border: 1px solid #DADADA; 
}

/* ========================================= */
/* PhotoSwipe customization */
/* ========================================= */


.pswp__button--close .pswp__icn {
  display: none;
}

.pswp__button--close::before {
  content: "";

  width: 24px;
  height: 24px;

  display: block;

  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;

  opacity: 0.9;

  transition: opacity 0.2s ease;

  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M6 6L18 18M18 6L6 18' stroke='black' stroke-width='3.6' stroke-linecap='round'/%3E%3Cpath d='M6 6L18 18M18 6L6 18' stroke='white' stroke-width='1.8' stroke-linecap='round'/%3E%3C/svg%3E");
}

.pswp__button--close:hover::before {
  opacity: 1;
}

.pswp__img {
  border: none !important;
}


/* ========================================= */
/* Hero Section */
/* ========================================= */

.hero-section {
    width: 100%;
    min-height: calc(100svh - 54px);
    
    padding-top: 90px;
    padding-bottom: 20px;
}

.hero-content {
    display: grid;

    grid-template-columns: 1.07fr 1.25fr;
    
    gap: 0 clamp(20px, 4vw, 45px);

    align-items: stretch;
}

.hero-text-column {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.hero-title {
    font-size: clamp(30px, 3.7vw, 38px);
    line-height: 1.05;
    font-weight: 700;

    color: #242424;

    margin-top: 0;
    margin-bottom: 24px;
}

.hero-description {
    font-size: clamp(15px, 1.4vw, 16px);
    line-height: 1.6;
    color: #4A4A4A;
    
    max-width: 95%;
    /* margin-bottom: 42px; */
}

.hero-image {
    width: 100%;

    height: auto;
    display: block;
}

.hero-button {
    
    display: inline-flex;
    align-items: center;
    gap: 8px;

    padding: 12px 14px;

    color: #1F4BD8;
    text-decoration: none;
    outline: 1px solid #1F4BD8;

    font-size: 16px;
    font-weight: 600;
    line-height: 1.2;
    letter-spacing: 0.01em;
    
    transition: background 0.2s ease;
}

.hero-button-icon {
    width: 13px;
    height: 13px;
    padding-top: 1px;

    flex: 0 0 auto;
}

.hero-image-column {
    
    display: flex;
    justify-content: center;
    align-items: center;

    align-self: center;
}

/* ========================================= */
/* Validation table */
/* ========================================= */

.validation-table-wrapper {
  max-width: 100%;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
  
  margin-bottom: 32px;
}

.validation-table {
  border-collapse: collapse;

  margin-top: 20px;
  margin-bottom: 12px;

  font-size: 15px;

  line-height: 1.5;

  width: max(320px, 100%);
}


.validation-table th:first-child,
.validation-table td:first-child {
  width: 240px;
}

@media (max-width: 500px) {
  .validation-table {
    table-layout: fixed;
  }
  
  .validation-table th:first-child,
  .validation-table td:first-child {
    width: 145px;
  }
}

.validation-table tbody td:first-child {
  font-weight: 500;
}

.validation-table th,
.validation-table td {
  padding: 8px 14px;

  text-align: left;

  vertical-align: top;

  border-left: 1px solid #D1D9E0;
  border-right: 1px solid #D1D9E0;
  border-top: 1px solid #D1D9E0;
}

.validation-table th {
  font-weight: 700;
  font-size: 15px;

  color: #202020;

  border-bottom: 2px solid #D1D9E0;
}

.validation-table tbody tr {
  border-bottom: 1px solid #D1D9E0;
}

.validation-table tbody tr:nth-child(even) {
  background: #F6F8FA;
}

.validation-table tbody tr:nth-child(odd) {
  background: #ffffff;
}

.validation-table td {
  color: #282828;
}

/* ========================================= */
/* Download project file button */
/* ========================================= */

.download-section {
    margin-top: 42px;
    margin-bottom: 56px;

    text-align: center;
}

.download-project-button {
    display: inline-flex;
    align-items: center;
    gap: 6px;

    padding: 10px 12px;

    color: #1F4BD8;
    text-decoration: none;

    font-size: 16.5px;
    font-weight: 600;
    line-height: 1.2;
    letter-spacing: 0.01em;
}

.download-project-button-icon {
  width: 16px;
  height: 16px;
  transform: translateY(-1px);
}

.download-project-button:hover {
    text-decoration: underline 1px;
    text-underline-offset: 2px;
}
/* ... */

